--- a/mts-flarum/values.yaml
+++ b/mts-flarum/values.yaml
@@ -1,6 +1,16 @@
 # Default values for mts-flarum.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+flarum:
+   passwordSecret: 
+   url:
+mariadb:
+   rootUser:
+      password: 
+   db:
+      user: flarum
+      password: 
+      name: flarum
 
 replicaCount: 1
 
