--- a/mts-traefik/Chart.yaml
+++ b/mts-traefik/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: traefik
+name: mts-traefik
 version: 1.52.5
 appVersion: 1.7.3
 description: A Traefik based Kubernetes ingress controller with Let's Encrypt support
