--- a/mts-flarum/templates/flarum-service.yaml
+++ b/mts-flarum/templates/flarum-service.yaml
@@ -10,8 +10,6 @@ spec:
   - name: "80"
     port: 80
     targetPort: 8888
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: flarum
-status:
-  loadBalancer: {}
