--- a/mts-flarum/templates/flarum-ingress.yaml
+++ b/mts-flarum/templates/flarum-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
    kubernetes.io/ingress.class: traefik
 spec:
  rules:
- - host: flarum.mobiletechnology.solutions
+ - host: {{ .Values.flarum.url }}
    http:
      paths:
      - backend:
