Making pgsql let us point to an existing pvc

--- a/mts-pgsql/Chart.yaml
+++ b/mts-pgsql/Chart.yaml
@@ -1,4 +1,4 @@
-name: postgresql
+name: mts-pgsql
 version: 1.0.0
 appVersion: 9.6.2
 description: Object-relational database management system (ORDBMS) with an emphasis on extensibility and on standards-compliance.
