--- a/mts-pgsql/templates/pvc.yaml
+++ b/mts-pgsql/templates/pvc.yaml
@@ -18,7 +18,7 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values persistence.size }}
+      storage: {{ .Values.persistence.size }}
   storageClassName: default
   volumeName:  {{ .Values.persistence.existingClaim }}
 status:
