--- a/mts-confluence/templates/service.yaml
+++ b/mts-confluence/templates/service.yaml
@@ -10,7 +10,7 @@ spec:
   - name: "80"
     port: 80
     targetPort: 8090
-  type: LoadBalancer
+  type: NodePort
   selector:
     service: mtsconfluence
 status:
