--- a/mts-pgsql/templates/pvc.yaml
+++ b/mts-pgsql/templates/pvc.yaml
@@ -20,7 +20,7 @@ spec:
     requests:
       storage: 8Gi
   storageClassName: default
-  volumeName: pvc-f7b0ff34-c33b-11e8-ad9e-0a58ac1f05ca
+  volumeName: jira-restored
 status:
   accessModes:
   - ReadWriteOnce
