--- a/mts-confluence/values.yaml
+++ b/mts-confluence/values.yaml
@@ -17,9 +17,9 @@ service:
   port: 80
 
 ingress:
-  enabled: true
+  enabled: "true"
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: traefik
     # kubernetes.io/tls-acme: "true"
   path: /
   hosts: []
