--- a/mts-confluence/values.yaml
+++ b/mts-confluence/values.yaml
@@ -6,6 +6,10 @@ replicaCount: 1
 
 confluence:
    url: confluence.mobiletechnology.solutions
+   azurestorageaccountname: accountname
+   azurestorageaccountkey: accountkey
+   backupfolderpath: /prod/confluence
+   backupsharename: backupfiles
 
 image:
   repository: nginx
