--- a/mts-jira/templates/deployment.yaml
+++ b/mts-jira/templates/deployment.yaml
@@ -10,8 +10,9 @@ spec:
   containers:
   - name: mtsjira
     image: {{ .Values.jira.image }}
+    imagePullPolicy: Always
     ports:
-    - containerPort: 8080
+    - containerPort: 8090
     env:
       - name: LICENSE
         value: {{ .Values.jira.license }}
@@ -31,7 +32,7 @@ spec:
         value: "{{ .Values.jira.upgrade }}"
     volumeMounts:
      - name: backupvolume
-       mountPath: /var/atlassian/application-data/jira/backups
+       mountPath: /var/atlassian/application-data/jira/export
        subPath: {{ .Values.jira.backupfolderpath }}
     securityContext:
       fsGroup: 1000
