--- a/mts-pgsql/Chart.yaml
+++ b/mts-pgsql/Chart.yaml
@@ -1,16 +1,14 @@
 name: mts-pgsql
-version: 1.0.0
-appVersion: 9.6.2
-description: Object-relational database management system (ORDBMS) with an emphasis on extensibility and on standards-compliance.
+version: 0.1.0
+appVersion: 10.6.0
+description: MTS Version of Postgres chart, based off of 3.8.0. This includes the mts-disk chart in requirements.
 keywords:
 - postgresql
 - postgres
 - database
 - sql
+- replication
+- cluster
 home: https://www.postgresql.org/
-icon: https://www.postgresql.org/media/img/about/press/elephant.png
-sources:
-- https://github.com/kubernetes/charts
-- https://github.com/docker-library/postgres
-maintainers: []
+icon: https://bitnami.com/assets/stacks/postgresql/img/postgresql-stack-110x117.png
 engine: gotpl
