--- a/mts-confluence/templates/deployment.yaml
+++ b/mts-confluence/templates/deployment.yaml
@@ -32,11 +32,17 @@ spec:
       value: "{{ .Values.confluence.upgrade }}"
     volumeMounts:
      - name: backupvolume
-       mountPath: /var/atlassian/application-data/confluence/backups
+       mountPath: {{ .Values.confluence.backupfoldermountpath }}
        subPath: {{ .Values.confluence.backupfolderpath }}
+     - name: attachmentvolume
+       mountPath: {{ .Values.confluence.attachmentsbackupfoldermountpath }}
+       subPath: {{ .Values.confluence.attachmentsbackupfolderpath }}
   securityContext:
     fsGroup: 1000
   volumes:
   - name: backupvolume
     persistentVolumeClaim:
       claimName: pvc-mtsbackup-confluence
+  - name: attachmentvolume
+    persistentVolumeClaim:
+      claimName: pvc-confluence-attachments
