--- a/mts-pgsql/requirements.yaml
+++ b/mts-pgsql/requirements.yaml
@@ -1,6 +1,6 @@
 dependencies: 
   - name: mts-disk
     repository: http://helm.mobiletechnology.solutions
-    version: 0.1.0
-    condition: .Values.persistence.existingClaim
+    version: 0.1.1
+    condition: mtsdisk.enabled
 
