--- a/mts-pgsql/values.yaml
+++ b/mts-pgsql/values.yaml
@@ -278,5 +278,8 @@ metrics:
     failureThreshold: 6
     successThreshold: 1
 
+mtsdisk:
+    enabled: false
+
 # Define custom environment variables to pass to the image here
 extraEnv: {}
