set up for cluster sharing - added environment tags to PV/PVCs

--- a/mts-confluence/values.yaml
+++ b/mts-confluence/values.yaml
@@ -14,6 +14,8 @@ confluence:
    backupfolderpath: prod/confluence
    backupsharename: backupfiles
    backupfoldermountpath: /var/atlassian/application-data/confluence/backups
+   createPersistentVolume: "true"
+   environment: dev
 
 image:
   repository: nginx
