--- a/mts-disk/values.yaml
+++ b/mts-disk/values.yaml
@@ -6,4 +6,8 @@ mtsdisk:
     storageclass:
     size:
     uri:
-    
+    type: azuredisk
+    azurestorageaccountname: 
+    azurestorageaccountkey: 
+    azurefilesharename: 
+
