--- a/mts-confluence/templates/attachment-pvc.yaml
+++ b/mts-confluence/templates/attachment-pvc.yaml
@@ -1,4 +1,3 @@
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -10,4 +9,24 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: "default"
-  volumeName: pv-confluence-attachments
+  volumeName: pv-confluence-attachments-{{ .Values.confluence.environment }}
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-confluence-attachments-{{ .Values.confluence.environment }}
+spec:
+  storageClassName: "default"
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteMany
+  azureFile:
+    secretName: mtsbackupsecret-confluence
+    shareName: {{ .Values.confluence.attachmentsharename }}
+    readOnly: false
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - uid=1000
+    - gid=1000
