--- a/mts-confluence/templates/pvc-azurefile-static.yaml
+++ b/mts-confluence/templates/pvc-azurefile-static.yaml
@@ -1,4 +1,3 @@
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -10,4 +9,25 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: "default"
-  volumeName: pv-mtsbackup-confluence
+  volumeName: pv-mtsbackup-confluence-{{ .Values.confluence.environment }}
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-mtsbackup-confluence-{{ .Values.confluence.environment }}
+spec:
+  storageClassName: "default"
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteMany
+  azureFile:
+    secretName: mtsbackupsecret-confluence
+    shareName: {{ .Values.confluence.backupsharename }}
+    readOnly: false
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - uid=1000
+    - gid=1000
+
