--- a/mts-jira/templates/pvc-mtsbackup.yaml
+++ b/mts-jira/templates/pvc-mtsbackup.yaml
@@ -1,4 +1,3 @@
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -10,4 +9,24 @@ spec:
     requests:
       storage: 5Gi
   storageClassName: "default"
-  volumeName: pv-mtsbackup-jira
+  volumeName: pv-mtsbackup-jira-{{ .Values.jira.environment }}
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-mtsbackup-jira-{{ .Values.jira.environment }}
+spec:
+  storageClassName: "default"
+  capacity:
+    storage: 5Gi
+  accessModes:
+    - ReadWriteMany
+  azureFile:
+    secretName: mtsbackupsecret-jira
+    shareName: {{ .Values.jira.backupsharename }}
+    readOnly: false
+  mountOptions:
+    - dir_mode=0777
+    - file_mode=0777
+    - uid=1000
+    - gid=1000
