--- a/mts-graylog/templates/ingress.yaml
+++ b/mts-graylog/templates/ingress.yaml
@@ -34,4 +34,8 @@ spec:
             backend:
               serviceName: {{ $fullName }}
               servicePort: http
+          - path: {{ $ingressPath }}
+            backend:
+              serviceName: {{ $fullName }}-gelf
+              servicePort: 1514
 {{- end }}
