--- a/mts-apache/values.yaml
+++ b/mts-apache/values.yaml
@@ -69,3 +69,12 @@ service:
   externalTrafficPolicy: Cluster
 ingress:
   enabled: true
+apache:
+    mountHTDocs: false
+    htdocsSecretName:
+    htdocShareName:
+    htdocsSubPath:
+    azureStorageAccountName:
+    azureStorageAccountKey:
+
+    
