Bug fixes for graylog and apache

--- a/mts-apache/templates/htdocs-secret.yaml
+++ b/mts-apache/templates/htdocs-secret.yaml
@@ -2,7 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
+{{ if .Values.apache.htdocsSecretName }}
+  name: {{ .Values.apache.htdocsSecretName }} 
+{{ else }} 
   name: {{ template "fullname" . }}-htdocs-secret
+{{ end }}
 type: Opaque
 data:
   azurestorageaccountname: {{ .Values.apache.azureStorageAccountName }}
