--- a/mts-graylog/values.yaml
+++ b/mts-graylog/values.yaml
@@ -8,7 +8,7 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   path: /
   protocol: http
-  domain: changeme
+  domain:
 #  proxyDomain:
   proxyProtocol: https
   tls: []
@@ -23,7 +23,6 @@ mongodbReplicaset:
 
 elasticsearch:
   name: elasticsearch
-  image: elasticsearch:5.6
 
   containers:
     resources:
@@ -41,7 +40,7 @@ elasticsearch:
 
 
 graylog:
-  passwordSecret: CHANGEMECHANGEME
+  passwordSecret:
   hostname: 
 
   web:
