--- a/mts-confluence/templates/deployment.yaml
+++ b/mts-confluence/templates/deployment.yaml
@@ -1,48 +1,55 @@
-apiVersion: v1
-kind: Pod
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: mtsconfluence
   creationTimestamp: null
   labels:
     service: mtsconfluence
 spec:
-  restartPolicy: Always
-  containers:
-  - name: mtsconfluence
-    image: mtscontainers.azurecr.io/mtsconfluence:0.3.1
-    imagePullPolicy: Always
-    ports:
-    - containerPort: 8090
-    env:
-    - name: LICENSE
-      value: {{ .Values.confluence.license }}
-    - name: SERVERID
-      value: {{ .Values.confluence.serverid }}
-    - name: POSTGRESURL
-      value: {{ .Values.confluence.postgresurl }}
-    - name: POSTGRESPASSWORD
-      value: {{ .Values.confluence.postgrespassword }}
-    - name: POSTGRESUSER
-      value: {{ .Values.confluence.postgresuser }}
-    - name: CONFLUENCEURL
-      value: {{ .Values.confluence.confluenceurl }}
-    - name: HTTPS
-      value: "{{ .Values.confluence.https }}"
-    - name: UPGRADE
-      value: "{{ .Values.confluence.upgrade }}"
-    volumeMounts:
-     - name: backupvolume
-       mountPath: {{ .Values.confluence.backupfoldermountpath }}
-       subPath: {{ .Values.confluence.backupfolderpath }}
-     - name: attachmentvolume
-       mountPath: {{ .Values.confluence.attachmentsbackupfoldermountpath }}
-       subPath: {{ .Values.confluence.attachmentsbackupfolderpath }}
-  securityContext:
-    fsGroup: 1000
-  volumes:
-  - name: backupvolume
-    persistentVolumeClaim:
-      claimName: pvc-mtsbackup-confluence
-  - name: attachmentvolume
-    persistentVolumeClaim:
-      claimName: pvc-confluence-attachments
+  selector:
+    matchLabels:
+      app: {{ template "fullname" . }}
+      release: "{{ .Release.Name }}"
+  replicas: 1
+  template:
+    spec:
+      restartPolicy: Always
+      containers:
+      - name: mtsconfluence
+        image: mtscontainers.azurecr.io/mtsconfluence:0.3.1
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8090
+        env:
+        - name: LICENSE
+          value: {{ .Values.confluence.license }}
+        - name: SERVERID
+          value: {{ .Values.confluence.serverid }}
+        - name: POSTGRESURL
+          value: {{ .Values.confluence.postgresurl }}
+        - name: POSTGRESPASSWORD
+          value: {{ .Values.confluence.postgrespassword }}
+        - name: POSTGRESUSER
+          value: {{ .Values.confluence.postgresuser }}
+        - name: CONFLUENCEURL
+          value: {{ .Values.confluence.confluenceurl }}
+        - name: HTTPS
+          value: "{{ .Values.confluence.https }}"
+        - name: UPGRADE
+          value: "{{ .Values.confluence.upgrade }}"
+        volumeMounts:
+         - name: backupvolume
+           mountPath: {{ .Values.confluence.backupfoldermountpath }}
+           subPath: {{ .Values.confluence.backupfolderpath }}
+         - name: attachmentvolume
+           mountPath: {{ .Values.confluence.attachmentsbackupfoldermountpath }}
+           subPath: {{ .Values.confluence.attachmentsbackupfolderpath }}
+      securityContext:
+        fsGroup: 1000
+      volumes:
+      - name: backupvolume
+        persistentVolumeClaim:
+          claimName: pvc-mtsbackup-confluence
+      - name: attachmentvolume
+        persistentVolumeClaim:
+          claimName: pvc-confluence-attachments
