--- a/mts-confluence/templates/deployment.yaml
+++ b/mts-confluence/templates/deployment.yaml
@@ -4,8 +4,13 @@ metadata:
   name: mtsconfluence
   creationTimestamp: null
   labels:
-    service: mtsconfluence
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
+  labels:
+    service: mtsconfluence
   selector:
     matchLabels:
       app: {{ template "fullname" . }}
