still fixing bugs on confluence

--- a/mts-confluence/templates/deployment.yaml
+++ b/mts-confluence/templates/deployment.yaml
@@ -9,14 +9,19 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  labels:
-    service: mtsconfluence
   selector:
     matchLabels:
       app: {{ template "fullname" . }}
       release: "{{ .Release.Name }}"
   replicas: 1
   template:
+    metadata:
+      labels:
+        app: {{ template "fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+        release: "{{ .Release.Name }}"
+        heritage: "{{ .Release.Service }}"
+        service: mtsconfluence
     spec:
       restartPolicy: Always
       containers:
