testing multiple hosts

--- a/mts-confluence/templates/confluence-ingress.yaml
+++ b/mts-confluence/templates/confluence-ingress.yaml
@@ -12,3 +12,9 @@ spec:
      - backend:
          serviceName: mtsconfluence
          servicePort: 80
+ - host: confluence-test.esdc.online
+   http:
+     paths:
+     - backend:
+         serviceName: mtsconfluence
+         servicePort: 80
