Trying confluence dual services

--- a/mts-confluence/templates/service.yaml
+++ b/mts-confluence/templates/service.yaml
@@ -15,3 +15,23 @@ spec:
     service: mtsconfluence
 status:
   loadBalancer: {}
+---
+{{ if .Values.service.oppositeService }}
+apiVersion: v1
+kind: Service
+metadata:
+  creationTimestamp: null
+  labels:
+    service: mtsconfluence-{{ .Values.environment.oppositeName }}
+  name: mtsconfluence-{{ .Values.environment.oppositeName }}
+spec:
+  ports:
+  - name: "80"
+    port: 80
+    targetPort: 8090
+  type: NodePort
+  selector:
+    service: mtsconfluence-{{ .Values.environment.oppositeName }}
+status:
+  loadBalancer: {}
+{{ end }}
