still trying to get second service up

--- a/mts-confluence/templates/service.yaml
+++ b/mts-confluence/templates/service.yaml
@@ -16,7 +16,7 @@ spec:
 status:
   loadBalancer: {}
 ---
-{{ if .Values.service.oppositeService }}
+{{ if (eq .Values.service.oppositeService "true") }}
 apiVersion: v1
 kind: Service
 metadata:
