Adding second host on traefik ingress

--- a/mts-traefik/templates/dashboard-ingress.yaml
+++ b/mts-traefik/templates/dashboard-ingress.yaml
@@ -27,4 +27,10 @@ spec:
       - backend:
           serviceName: {{ template "traefik.fullname" . }}-dashboard
           servicePort: 80
+  - host: {{ .Values.dashboard.domain }}-{{ .Values.dashboard.environmentHost }}
+    http:
+      paths:
+      - backend:
+          serviceName: {{ template "traefik.fullname" . }}-dashboard
+          servicePort: 80
 {{- end }}
