--- a/mts-traefik/templates/dashboard-ingress.yaml
+++ b/mts-traefik/templates/dashboard-ingress.yaml
@@ -27,7 +27,7 @@ spec:
       - backend:
           serviceName: {{ template "traefik.fullname" . }}-dashboard
           servicePort: 80
-  - host: {{ .Values.dashboard.domain }}-{{ .Values.dashboard.environmentHost }}
+  - host: {{ .Values.dashboard.environmentHost }}
     http:
       paths:
       - backend:
