--- a/mts-confluence/templates/confluence-ingress.yaml
+++ b/mts-confluence/templates/confluence-ingress.yaml
@@ -13,5 +13,5 @@ spec:
          serviceName: mtsconfluence
          servicePort: 80
 {{- if .Values.ingress.hosts }}
-{{ toYaml .Values.ingress.hosts | indent 6 }}
+{{ toYaml .Values.ingress.hosts }}
 {{- end }}
