Removing messaging that may be causing errors

--- a/mts-graylog/templates/ingress.yaml
+++ b/mts-graylog/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
 
   rules:
   {{- range .Values.ingress.hosts }}
-    - host: {{ . }}.{{required "A valid .Values.ingress.domain entry required!" .Values.ingress.domain }}
+    - host: {{ . }}
       http:
         paths:
           - path: {{ $ingressPath }}
