Changing jenkins ingress hosts config

--- a/mts-jenkins/templates/jenkins-master-ingress.yaml
+++ b/mts-jenkins/templates/jenkins-master-ingress.yaml
@@ -9,15 +9,17 @@ metadata:
   name: {{ template "jenkins.fullname" . }}
 spec:
   rules:
-  - host: {{ .Values.Master.HostName | quote }}
-    http:
-      paths:
-      - backend:
-          serviceName: {{ template "jenkins.fullname" . }}
-          servicePort: {{ .Values.Master.ServicePort }}
+  {{- range .Values.ingress.hosts }}
+    - host: {{ . }}
+      http:
+        paths:
+          - backend:
+              serviceName: {{ template "jenkins.fullname" . }}
+              servicePort: {{ .Values.Master.ServicePort }}
 {{- if .Values.Master.Ingress.Path }}
-        path: {{ .Values.Master.Ingress.Path }}
+            path: {{ .Values.Master.Ingress.Path }}
 {{- end -}}
+  {{- end }}
 {{- if .Values.Master.Ingress.TLS }}
   tls:
 {{ toYaml .Values.Master.Ingress.TLS | indent 4 }}
